--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "c4ee677d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "e1b2f983",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "09e7f1dd",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "[77 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5e592808",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "6     Raclette Courdavault             5 kg pkg."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "263bd332",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "4        Camembert Pierrot      14620.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "29cf61bb",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "4  Dairy Products            10"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "16b99897",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "7         Seafood     21.354300"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,110 +753,98 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customerid</th>\n",
-       "      <th>customername</th>\n",
-       "      <th>totamount</th>\n",
-       "      <th>totorders</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>CustomerName</th>\n",
+       "      <th>AvgOrderAmount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>Ernst Handel</td>\n",
-       "      <td>35630.0</td>\n",
-       "      <td>35</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Piccolo und mehr</td>\n",
+       "      <td>4014.2500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65</td>\n",
-       "      <td>Rattlesnake Canyon Grocery</td>\n",
-       "      <td>18442.0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Simons bistro</td>\n",
+       "      <td>2444.3333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37</td>\n",
-       "      <td>Hungry Owl All-Night Grocers</td>\n",
-       "      <td>15405.0</td>\n",
-       "      <td>21</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Queen Cozinha</td>\n",
+       "      <td>1991.6667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>63</td>\n",
-       "      <td>QUICK-Stop</td>\n",
-       "      <td>18171.0</td>\n",
-       "      <td>20</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Mère Paillarde</td>\n",
+       "      <td>1673.8571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>71</td>\n",
        "      <td>Save-a-lot Markets</td>\n",
-       "      <td>22516.0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>1407.2500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>11</td>\n",
-       "      <td>B''s Beverages</td>\n",
-       "      <td>597.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Galería del gastrónomo</td>\n",
+       "      <td>147.7500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>91</td>\n",
-       "      <td>Wolski</td>\n",
-       "      <td>585.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Romero y tomillo</td>\n",
+       "      <td>116.5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
-       "      <td>47</td>\n",
-       "      <td>LINO-Delicateses</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Centro comercial Moctezuma</td>\n",
+       "      <td>63.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
        "      <td>27</td>\n",
        "      <td>Franchi S.p.A.</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>62.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>73</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Antonio Moreno Taquería</td>\n",
-       "      <td>504.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Ana Trujillo Emparedados y helados</td>\n",
+       "      <td>55.5000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>74 rows × 4 columns</p>\n",
+       "<p>74 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    customerid                  customername  totamount  totorders\n",
-       "0           20                  Ernst Handel    35630.0         35\n",
-       "1           65    Rattlesnake Canyon Grocery    18442.0         22\n",
-       "2           37  Hungry Owl All-Night Grocers    15405.0         21\n",
-       "3           63                    QUICK-Stop    18171.0         20\n",
-       "4           71            Save-a-lot Markets    22516.0         16\n",
-       "..         ...                           ...        ...        ...\n",
-       "69          11                B''s Beverages      597.0          2\n",
-       "70          91                        Wolski      585.0          2\n",
-       "71          47              LINO-Delicateses      500.0          1\n",
-       "72          27                Franchi S.p.A.       62.0          1\n",
-       "73           3       Antonio Moreno Taquería      504.0          1\n",
+       "    CustomerID                        CustomerName  AvgOrderAmount\n",
+       "0           59                    Piccolo und mehr       4014.2500\n",
+       "1           73                       Simons bistro       2444.3333\n",
+       "2           62                       Queen Cozinha       1991.6667\n",
+       "3           51                      Mère Paillarde       1673.8571\n",
+       "4           71                  Save-a-lot Markets       1407.2500\n",
+       "..         ...                                 ...             ...\n",
+       "69          29              Galería del gastrónomo        147.7500\n",
+       "70          69                    Romero y tomillo        116.5000\n",
+       "71          13          Centro comercial Moctezuma         63.0000\n",
+       "72          27                      Franchi S.p.A.         62.0000\n",
+       "73           2  Ana Trujillo Emparedados y helados         55.5000\n",
        "\n",
-       "[74 rows x 4 columns]"
+       "[74 rows x 3 columns]"
       ]
      },
      "execution_count": 16,
@@ -865,18 +853,26 @@
     }
    ],
    "source": [
-    "query = '''SELECT \n",
-    "    customers.customerid AS customerid,\n",
-    "    customers.customername AS customername,\n",
-    "    SUM(products.price * orderdetails.quantity) AS totamount,\n",
-    "    COUNT(orders.orderid) AS totorders\n",
-    "FROM \n",
-    "    Customers\n",
-    "JOIN orders ON customers.customerid = orders.customerid\n",
-    "JOIN orderdetails ON Orders.OrderID = orderdetails.orderid\n",
-    "JOIN products ON orderdetails.productid = products.productid\n",
-    "GROUP BY customers.customerid, customers.customername\n",
-    "ORDER BY totorders DESC\n",
+    "query = '''\n",
+    "WITH AverageOrderAmount AS (\n",
+    "    SELECT\n",
+    "        c.CustomerID,\n",
+    "        c.CustomerName,\n",
+    "        AVG(od.Quantity * p.Price) AS AvgOrderAmount\n",
+    "    FROM\n",
+    "        Customers c\n",
+    "    JOIN\n",
+    "        Orders o ON c.CustomerID = o.CustomerID\n",
+    "    JOIN\n",
+    "        OrderDetails od ON o.OrderID = od.OrderID\n",
+    "\tJOIN\n",
+    "\t\tProducts p ON p.ProductId = od.ProductID\n",
+    "    GROUP BY\n",
+    "        c.CustomerID, c.CustomerName\n",
+    ")\n",
+    "SELECT *\n",
+    "FROM AverageOrderAmount \n",
+    "ORDER BY AvgOrderAmount DESC;\n",
     "\n",
     "\n",
     "'''\n",
@@ -950,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "aa603fd4",
    "metadata": {},
    "outputs": [
@@ -997,12 +993,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chang</td>\n",
+       "      <td>Raclette Courdavault</td>\n",
        "      <td>115.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Raclette Courdavault</td>\n",
+       "      <td>Chang</td>\n",
        "      <td>115.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1047,12 +1043,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Fløtemysost</td>\n",
+       "      <td>Tarte au sucre</td>\n",
        "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Tarte au sucre</td>\n",
+       "      <td>Fløtemysost</td>\n",
        "      <td>75.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1064,8 +1060,8 @@
        "0   Gnocchi di nonna Alice       173.0\n",
        "1                Tourtière       126.0\n",
        "2                  Geitost       119.0\n",
-       "3                    Chang       115.0\n",
-       "4     Raclette Courdavault       115.0\n",
+       "3     Raclette Courdavault       115.0\n",
+       "4                    Chang       115.0\n",
        "5           Sirop d'érable       106.0\n",
        "6             Vegie-spread       100.0\n",
        "7            Côte de Blaye        99.0\n",
@@ -1074,11 +1070,11 @@
        "10     Sir Rodney's Scones        92.0\n",
        "11                 Pavlova        86.0\n",
        "12           Zaanse koeken        85.0\n",
-       "13             Fløtemysost        75.0\n",
-       "14          Tarte au sucre        75.0"
+       "13          Tarte au sucre        75.0\n",
+       "14             Fløtemysost        75.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
